<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/PersonID"
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:text="@string/id"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UpdateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonID" />

    <EditText
        android:id="@+id/UpdateWorkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/work_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/UpdateName" />

    <Button
        android:id="@+id/UpdateBtn"
        android:layout_width="118dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#126C17"/>

    <Button
        android:id="@+id/DeleteBtn"
        android:layout_width="118dp"
        android:layout_height="44dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="?attr/colorError">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>