<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/linearLayout">

    <EditText
        android:id="@+id/EmployeesNum"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/number_of_employees"
        android:inputType="number"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timeFrom1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:hint="@string/work_time_from"/>
        <TextView
            android:id="@+id/timeUntil1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:hint="@string/work_time_until"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timeFrom2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:hint="@string/work_time_from"/>
        <TextView
            android:id="@+id/timeUntil2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:hint="@string/work_time_until"/>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/GridLayout">

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/next"
            android:backgroundTint="#2A40AA"/>

    </GridLayout>

</LinearLayout>
